apps/base/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.30
  externalTrafficPolicy: Cluster
  ports:
    - port: 53
      targetPort: 53
      name: dns-tcp
      protocol: TCP
    - port: 53
      targetPort: 53
      name: dns-udp
      protocol: UDP
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: pihole
