apps/base/pihole/ingressroute.yaml
# TLS via cert-manager (Cloudflare DNS-01). Admin UI at https://pihole.joesabbagh.com:30443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.joesabbagh.com`)
      kind: Rule
      services:
        - name: pihole
          port: 80
  tls:
    secretName: pihole-tls
